--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "type": "module",
+  "scripts": {
+  "start": "nodemon app.js"
+},
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "bcryptjs": "^2.4.3",
